# spotify-folders-backup

./: .gitignore  README.md  credentials.py  credentials.yaml  pyproject.toml  requirements.txt
app/: backup.py  main.py  model.py  spotify.py
code/: main.py
src/: main.py  model.py  spotify.py
