[project]
name = "folderbackup"
version = "0.1.0"
description = "Backup your Spotify playlists including the folder structure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "spotipy>=2.24.0",
    "python-snappy>=0.7.3",
]

[project.scripts]
backup = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

